--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Stencil Starter App</title>
+  <title>Spaghetti</title>
   <meta name="Description" content="Welcome to the Stencil App Starter. You can use this starter to build entire apps all with web components using Stencil!">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <meta name="theme-color" content="#16161d">
@@ -10,7 +10,7 @@
 
   <meta http-equiv="x-ua-compatible" content="IE=Edge"/>
 
-  <script src="/build/app.js"></script>
+  <script src="build/mystencils.js"></script>
 
   <link rel="apple-touch-icon" href="/assets/icon/icon.png">
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
@@ -18,7 +18,8 @@
 </head>
 <body>
 
-  <my-app></my-app>
+  <stencil-textbox name="Kevin Ure"></stencil-textbox>
+  <json-display endpoint="https://jsonplaceholder.typicode.com/posts/1"></json-display>
 
   <style>
     body {
